# persona-api

./: .gitignore  .pre-commit-config.yaml  EMOJI_GUIDE.md  Makefile  README.md  big5.owl  pyproject.toml  training_data.errors.jsonl  training_data.jsonl
docs/: big5-correlations.md  personality_archetypes.md  score-coherence.md
persona_api/: cli_generate_profile.py  cli_random_facet.py  cli_resolve_behavior.py  cli_resolve_facet.py  main.py
scripts/: analyze_facet_keywords.py  consolidate_training_data.py  gen_behavioral_instructions.py  gen_domain_text_structure.py  gen_facet_data.py  gen_keyword_prompts.py  gen_score_coherence.py  generate_training_data.py  reorganize_behavioral_instructions.py
tests/: test_random_facet_generator.py
training_data/: errors.jsonl  training_data_0001.jsonl  training_data_0002.jsonl  training_data_0003.jsonl  training_data_0004.jsonl  training_data_0005.jsonl  training_data_0006.jsonl  training_data_0007.jsonl  training_data_0008.jsonl  training_data_0009.jsonl  training_data_0010.jsonl  training_data_0011.jsonl  training_data_0012.jsonl  training_data_0013.jsonl  training_data_0014.jsonl  training_data_0015.jsonl  training_data_0016.jsonl  training_data_0017.jsonl  training_data_0018.jsonl  training_data_0019.jsonl  training_data_0020.jsonl  training_data_0021.jsonl  training_data_0022.jsonl  training_data_0023.jsonl  training_data_0024.jsonl  training_data_0025.jsonl  training_data_0026.jsonl  training_data_0027.jsonl  training_data_0028.jsonl  training_data_0029.jsonl  training_data_0030.jsonl  training_data_0031.jsonl  (+1302 more)
(+682 files in other folders)
